--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'Short stories'
 - !lcsh 'Police -- Fiction'
+- GITenberg
 title: Zero Data
 url: http://www.gutenberg.org/ebooks/29727
